# assignment5-alignment

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: python-explanation-style.mdc
cs336_alignment/: drgrpo_grader.py  evaluate_math.py  evaluate_vllm.py  gpro_helper.py  grpo_experiments.py  grpo_helper.py  log.py  sft_helper.py  sft_math_reasoning.py  sft_math_reasoning_ei.py
results/base/: zero_shot_math_evaluation.jsonl  zero_shot_math_evaluation_hf.jsonl
tests/: adapters.py  conftest.py
wandb/: latest-run
wandb/offline-run-20260419_012723-c4rewn0m/: run-c4rewn0m.wandb
wandb/offline-run-20260419_012723-c4rewn0m/files/: wandb-metadata.json
wandb/offline-run-20260419_013247-1893dupq/: run-1893dupq.wandb
wandb/offline-run-20260419_013247-1893dupq/files/: wandb-metadata.json
wandb/offline-run-20260419_013323-6uu7s8ba/: run-6uu7s8ba.wandb
wandb/offline-run-20260419_013323-6uu7s8ba/files/: wandb-metadata.json
wandb/offline-run-20260419_013432-thro1jf2/: run-thro1jf2.wandb
wandb/offline-run-20260419_013724-feeys3iy/: run-feeys3iy.wandb
wandb/offline-run-20260419_013753-f9mlfi4y/: run-f9mlfi4y.wandb
wandb/offline-run-20260419_014151-dzsdewm8/: run-dzsdewm8.wandb
wandb/offline-run-20260419_014624-pc4etf8p/: run-pc4etf8p.wandb
wandb/offline-run-20260419_014700-9qvv7omv/: run-9qvv7omv.wandb
wandb/offline-run-20260419_014754-ne2bmxma/: run-ne2bmxma.wandb
wandb/offline-run-20260419_015050-36opg0uj/: run-36opg0uj.wandb
wandb/offline-run-20260419_015446-on8q2yhj/: run-on8q2yhj.wandb
(+22 files in other folders)
